Updated logo and set color pallete

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
+:root {
+  --primary-color: #2a9d8f;
+  --secondary-color: #264653;
+  --accent-color: #e76f51;
+  --secondary-accent: #f4a261;
+  --tertiary-acent: #e9c46a;
+  --primary-dark: #2b7a78;
+  --primary-light: #def2f1;
+  --white: #feffff;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
+  background-color: var(--primary-color);
+  height: 100vh;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.banner-logo {
+  width: 150px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header1 {
+  color: var(--secondary-color);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.subheading {
+  color: var(--secondary-color);
 }
